// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducer should set the active child block id 1`] = `
Object {
  "activeChildBlockId": "modern-tribe",
  "header": null,
  "isChildBlockSelected": false,
  "isParentBlockLoading": false,
  "isParentBlockSelected": false,
  "isSettingsOpen": false,
  "provider": "",
  "sharedCapacity": "",
  "tempSharedCapacity": "",
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;

exports[`Reducer should set the header 1`] = `
Object {
  "activeChildBlockId": "",
  "header": 1,
  "isChildBlockSelected": false,
  "isParentBlockLoading": false,
  "isParentBlockSelected": false,
  "isSettingsOpen": false,
  "provider": "",
  "sharedCapacity": "",
  "tempSharedCapacity": "",
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;

exports[`Reducer should set the is child block selected 1`] = `
Object {
  "activeChildBlockId": "",
  "header": null,
  "isChildBlockSelected": true,
  "isParentBlockLoading": false,
  "isParentBlockSelected": false,
  "isSettingsOpen": false,
  "provider": "",
  "sharedCapacity": "",
  "tempSharedCapacity": "",
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;

exports[`Reducer should set the is parent block loading 1`] = `
Object {
  "activeChildBlockId": "",
  "header": null,
  "isChildBlockSelected": false,
  "isParentBlockLoading": false,
  "isParentBlockSelected": undefined,
  "isSettingsOpen": false,
  "provider": "",
  "sharedCapacity": "",
  "tempSharedCapacity": "",
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;

exports[`Reducer should set the is parent block selected 1`] = `
Object {
  "activeChildBlockId": "",
  "header": null,
  "isChildBlockSelected": false,
  "isParentBlockLoading": undefined,
  "isParentBlockSelected": false,
  "isSettingsOpen": false,
  "provider": "",
  "sharedCapacity": "",
  "tempSharedCapacity": "",
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;

exports[`Reducer should set the is settings open 1`] = `
Object {
  "activeChildBlockId": "",
  "header": null,
  "isChildBlockSelected": false,
  "isParentBlockLoading": false,
  "isParentBlockSelected": false,
  "isSettingsOpen": true,
  "provider": "",
  "sharedCapacity": "",
  "tempSharedCapacity": "",
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;

exports[`Reducer should set the provider 1`] = `
Object {
  "activeChildBlockId": "",
  "header": null,
  "isChildBlockSelected": false,
  "isParentBlockLoading": false,
  "isParentBlockSelected": false,
  "isSettingsOpen": false,
  "provider": "provider",
  "sharedCapacity": "",
  "tempSharedCapacity": "",
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;

exports[`Reducer should set the shared capacity 1`] = `
Object {
  "activeChildBlockId": "",
  "header": null,
  "isChildBlockSelected": false,
  "isParentBlockLoading": false,
  "isParentBlockSelected": false,
  "isSettingsOpen": false,
  "provider": "",
  "sharedCapacity": 99,
  "tempSharedCapacity": "",
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;

exports[`Reducer should set the temp shared capacity 1`] = `
Object {
  "activeChildBlockId": "",
  "header": null,
  "isChildBlockSelected": false,
  "isParentBlockLoading": false,
  "isParentBlockSelected": false,
  "isSettingsOpen": false,
  "provider": "",
  "sharedCapacity": "",
  "tempSharedCapacity": 99,
  "tickets": Object {
    "allIds": Array [],
    "byId": Object {},
  },
}
`;
